5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1800_2567.log
== SUBMITION (2019-06-11 10:37:39) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = zeros(size(n), dtype=string)
while(n>0):
	
-- EXECUTION TIME:
1.39763
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:37:40) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = zeros(size(n), dtype=string)
while(n>0):
	
-- EXECUTION TIME:
2.43352
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:37:40) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = zeros(size(n), dtype=string)
while(n>0):
	
-- EXECUTION TIME:
2.18578
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:39:27) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"

nn = n*d
print(nn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:46:07) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in size(s):
	s = "*"*i
	n = n -1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:46:49) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in size(s):
	s = "*"*n
	n = n -1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:47:24) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in size(s):
	d = "*"*n
	n = n -1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:47:50) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n -1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:48:19) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:48:30) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- EXECUTION TIME:
0.86109
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:04:46) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"

for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:04:47) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"

for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:04:50) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"

for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- EXECUTION TIME:
1.33664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2567/main.py", line 6, in <module>
    for i in range(size(s)):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:04:59) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:05:12) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:05:35) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:05:40) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:27:09) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- EXECUTION TIME:
1.29995
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:27:10) 
-- CODE:
from numpy import*

n = int(input("Um numero:"))
d = "*"
s = zeros(n, dtype=int)
for i in range(size(s)):
	d = "*"*n
	n = n-1
	print(d)
for i in range(size(s)+1):
	d = "*"*n
	n = n+1
	print(d)
-- EXECUTION TIME:
1.49529
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
